fix stretch issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,7 +40,7 @@ body,
 html,
 .layout-container,
 .page-container {
-    height: 100%;
+    min-height: 100%;
 }
 
 a {
